Adding sitemap and other metadata

--- a/src/content/blog/2015-10-27-jekyll-continuous-integration-with-codeship-aerobatic-and-bitbucket.mdx
+++ b/src/content/blog/2015-10-27-jekyll-continuous-integration-with-codeship-aerobatic-and-bitbucket.mdx
@@ -4,7 +4,7 @@ subtitle: How to build a continuous integration pipeline for a Jekyll static sit
 description: How to build a continuous integration pipeline for a Jekyll static site using Codeship for CI, Bitbucket for code hosting, and Aerobatic for hosting the static site.
 slug: jekyll-continuous-integration-with-codeship-aerobatic-and-bitbucket
 date: 2015-10-27
-tags: continuous integration, static hosting, jekyll
+tags: [continuous integration, static hosting, jekyll]
 ---
 
 import MdxImage from '$components/mdx/Image';
