--- a/src/content/blog/2015-12-25-d3-visualization-with-data-in-aws-s3.mdx
+++ b/src/content/blog/2015-12-25-d3-visualization-with-data-in-aws-s3.mdx
@@ -3,7 +3,7 @@ title: Create A D3.js Visualization With Data from AWS S3
 description: How to create d3 charts with large data files on AWS S3 instead of a git repo.
 slug: d3-visualization-with-data-in-aws-s3
 date: 2015-12-25
-tags: d3js, visualization, s3-proxy
+tags: [d3js, visualization, s3-proxy]
 ---
 
 [D3.js](http://d3js.org/) is a popular JavaScript library for manipulating documents based on data. A common pattern for working with d3 is to read in data from .csv, .tsv, or .json files. However, what happens when those data files are large? Storing them in a git repository alongside the code can be inefficient with the repo becoming bloated, and every push taking a long time.
