--- a/src/content/blog/2016-01-15-five-tech-trends-of-a-modern-agency.mdx
+++ b/src/content/blog/2016-01-15-five-tech-trends-of-a-modern-agency.mdx
@@ -3,7 +3,7 @@ title: Five Tech Trends of a Modern Digital Agency
 description: How progressive digital agencies are changing their technology approach to working with clients
 slug: five-tech-trends-of-a-modern-agency
 date: 2016-01-14
-tags: agencies, static sites, git, continuous delivery
+tags: [agencies, static sites, git, continuous delivery]
 ---
 
 import MdxImage from '$components/mdx/Image';
