--- a/src/content/blog/2016-01-16-password-protect-a-hugo-site.mdx
+++ b/src/content/blog/2016-01-16-password-protect-a-hugo-site.mdx
@@ -3,7 +3,7 @@ title: How To Password Protect A Hugo Site
 description: Add a login page to a Hugo site hosted on Bitbucket
 slug: password-protect-a-hugo-site
 date: 2017-02-19
-tags: hugo, passwords, login
+tags: [hugo, passwords, login]
 ---
 
 import Cli from '$components/mdx/Cli';
@@ -28,7 +28,13 @@ You can style your login page however you want. What's essential is that the for
         <h6 class="error" id="password-error" style="color:red"><strong></strong></h6>
         <form method="POST">
           <label for="password">Password</label>
-          <input class="u-full-width" type="password" placeholder="password" name="aerobatic-password" id="aerobatic-password" />
+          <input
+            class="u-full-width"
+            type="password"
+            placeholder="password"
+            name="aerobatic-password"
+            id="aerobatic-password"
+          />
           <input class="button-primary" type="submit" value="Submit" />
         </form>
         <!-- /form -->
