--- a/src/content/blog/2016-02-29-why-static-hosting-instead-of-s3.mdx
+++ b/src/content/blog/2016-02-29-why-static-hosting-instead-of-s3.mdx
@@ -3,12 +3,12 @@ title: Five Reasons to Host a Static Site with Aerobatic Instead of S3
 description: I'm a developer. S3 is almost free. Why would I pay for a static hosting service?
 slug: why-static-hosting-instead-of-s3
 date: '2016-02-29'
-tags: s3, static hosting
+tags: [s3, static hosting]
 ---
 
 At work, have you ever been in a situation where you're describing an idea and a co-worker says, "Oh, I can put that together in an afternoon." Or, that same co-worker reads of a new _Show HN_ project on Hacker News and remarks, "That's so simple, I could build that in a couple of hours!"
 
-In our experience, developers (ourselves included) often have a tendency to underestimate how long things take, and more importantly, to discount the value of their time to $0.
+In our experience, developers (ourselves included) often have a tendency to underestimate how long things take, and more importantly, to discount the value of their time to \$0.
 
 Since starting Aerobatic more than 2 years ago, sometimes when we meet a developer and tell them we've built a static hosting platform, a not entirely uncommon response is, "Oh, I'd never need such a service. I stick all my static sites on S3."
 
