--- a/src/content/blog/2016-03-09-is-it-cold-enough-for-beer.mdx
+++ b/src/content/blog/2016-03-09-is-it-cold-enough-for-beer.mdx
@@ -3,12 +3,15 @@ title: Is it Cold Enough for Beer Outside?
 description: Use this single purpose site to see if it's cold enough to store beer outside, and learn about some great Aerobatic features.
 slug: is-it-cold-enough-for-beer
 date: 2016-03-09
-tags: beer, jquery, cd
+tags: [beer, jquery, cd]
 ---
 
 import MdxImage from '$components/mdx/Image';
 
-<MdxImage src="//www.aerobatic.com/media/beers.jpg" style={{ marginLeft: '1em', maxHeight: '15em', float: 'right' }} />
+<MdxImage
+  src="//www.aerobatic.com/media/beers.jpg"
+  style={{ marginLeft: '1em', maxHeight: '15em', float: 'right' }}
+/>
 
 As winter releases its grip on the northern hemisphere, and things begin to chill down south, you may be wondering: _Can I store my beer outside?_ Because, if your fridge is anything like mine, there's too much food in there for more than a six pack of beer. Ideally, I would like to keep it on the back porch.
 
