--- a/src/content/blog/2016-03-23-jekyll-assets-bootstrap.mdx
+++ b/src/content/blog/2016-03-23-jekyll-assets-bootstrap.mdx
@@ -3,14 +3,18 @@ title: Jekyll, Bootstrap, Sass, and asset pipelines
 description: Build optimized asset bundles to speed up your Jekyll site
 slug: jekyll-assets-bootstrap
 date: 2016-03-23
-tags: jekyll, plugin, bootstrap, static site generator, cd
+tags: [jekyll, plugin, bootstrap, static site generator, cd]
 ---
 
 import MdxImage from '$components/mdx/Image';
 import Cli from '$components/mdx/Cli';
 import CheckboxList from '$components/mdx/CheckboxList';
 
-<MdxImage align="center" alt="Bootstrap + Jekyll" src="https://www.aerobatic.com/media/blog/bootstrap-plus-jekyll.png" />
+<MdxImage
+  align="center"
+  alt="Bootstrap + Jekyll"
+  src="https://www.aerobatic.com/media/blog/bootstrap-plus-jekyll.png"
+/>
 
 Twitter Bootstrap has 94K stars on GitHub and Jekyll 24K. I'd say these two open-source darlings are due for a mashup. In this tutorial we'll be building a "Jekyll-ified" version of the [official Bootstrap blog example template](http://getbootstrap.com/examples/blog/#).
 
