--- a/src/content/blog/2016-04-24-jekyll-revealjs.mdx
+++ b/src/content/blog/2016-04-24-jekyll-revealjs.mdx
@@ -3,7 +3,7 @@ title: Building a reveal.js presentation with Jekyll Collections
 description: How to use reveal.js and Jekyll collections to create HTML presentations
 slug: jekyll-revealjs
 date: 2016-04-24
-tags: jekyll, static site generator, revealjs
+tags: [jekyll, static site generator, revealjs]
 ---
 
 [Reveal.js](http://lab.hakim.se/reveal-js/#/) is an open-source HTML presentation framework. In this tutorial, we'll combine [Jekyll](http://jekyllrb.com/) and reveal.js to create our presentation. While this has been done before using various approaches, in this scenario, we'll take advantage of [Jekyll collections](https://jekyllrb.com/docs/collections/) to build our slides.
