--- a/src/content/blog/2016-04-27-gatsbyjs.mdx
+++ b/src/content/blog/2016-04-27-gatsbyjs.mdx
@@ -4,7 +4,7 @@ description: Gatsby transforms plain text into dynamic blogs and websites using 
 layout: post
 date: 2016-04-27
 slug: gatsbyjs
-tags: gatsby, react, static site generator, javascript
+tags: [gatsby, react, static site generator, javascript]
 ---
 
 import MdxImage from '$components/mdx/Image';
