--- a/src/content/blog/2016-06-13-announcing-frankfurt-region-expansion.mdx
+++ b/src/content/blog/2016-06-13-announcing-frankfurt-region-expansion.mdx
@@ -3,7 +3,7 @@ title: Aerobatic expands to Frankfurt region
 description: We recently introduced multi-region support for our AWS static hosting platform starting with eu-central-1 in Frankfurt
 slug: announcing-frankfurt-region-expansion
 date: 2016-06-13
-tags: aws, frankfurt, multi-region
+tags: [aws, frankfurt, multi-region]
 ---
 
 Here at Aerobatic we treat performance seriously and recognize that one of the chief benefits of static sites is fast page load time - no matter where the end user is physically located. We've always served your static assets such as images, JavaScripts, stylesheets, etc. from the CloudFront edge node nearest to your end users. But the parent page request passes through CloudFront to our origin servers in the AWS **us-west-2** data centers in Oregon. Depending on the location of the end user and their internet speed, this can result in a considerable latency penalty.
