--- a/src/content/blog/2016-09-16-http2-support-now-live.mdx
+++ b/src/content/blog/2016-09-16-http2-support-now-live.mdx
@@ -3,7 +3,7 @@ title: All Aerobatic sites now HTTP/2 enabled
 description: Now your websites hosted on Aerobatic can take full advantage of the performance benefits of HTTP/2.
 
 date: 2016-09-16
-tags: http2
+tags: [http2]
 slug: http2-support-now-live
 ---
 
