--- a/src/content/blog/2017-02-04-hugo-bitbucket-pipelines.mdx
+++ b/src/content/blog/2017-02-04-hugo-bitbucket-pipelines.mdx
@@ -3,7 +3,7 @@ title: Hugo Continuous Deployment with Bitbucket Pipelines and Aerobatic
 description: A tutorial on how to continuously build and deploy a Hugo site with Bitbucket Pipelines.
 
 date: 2017-02-04
-tags: bitbucket, hugo, bitbucket pipelines
+tags: [bitbucket, hugo, bitbucket pipelines]
 slug: hugo-bitbucket-pipelines
 ---
 
