--- a/src/content/blog/2017-02-06-jekyll-travis-github-aerobatic.mdx
+++ b/src/content/blog/2017-02-06-jekyll-travis-github-aerobatic.mdx
@@ -4,7 +4,7 @@ description: Aerobatic builds, deploys, and hosts your Jekyll site from Github, 
 slug: jekyll-travis-github-aerobatic
 
 date: 2017-02-06
-tags: jekyll, static site generator, travis, cd
+tags: [jekyll, static site generator, travis, cd]
 ---
 
 import MdxImage from '$components/mdx/Image';
