--- a/src/content/blog/2017-02-10-aerobatic-optimized-docker-build-images.mdx
+++ b/src/content/blog/2017-02-10-aerobatic-optimized-docker-build-images.mdx
@@ -3,7 +3,7 @@ title: Optimized Docker images for continuous deployment to Aerobatic
 description: Use these lightweight Docker images for building your Jekyll or Hugo sites and deploying to Aerobatic
 slug: optimized-docker-images-continuous-deployment
 date: 2017-02-10
-tags: docker, hugo, jekyll, cd, bitbucket pipelines
+tags: [docker, hugo, jekyll, cd, bitbucket pipelines]
 ---
 
 import MdxImage from '$components/mdx/Image';
