--- a/src/content/blog/2017-02-11-hugo-npm-buildtool-setup.mdx
+++ b/src/content/blog/2017-02-11-hugo-npm-buildtool-setup.mdx
@@ -3,12 +3,15 @@ title: NPM scripts for building and deploying Hugo sites
 description: Our marketing site, www.aerobatic.com, is built with Hugo. Learn about how we use npm scripts to manage our build and deploy process.
 slug: hugo-npm-buildtool-setup
 date: 2017-02-12
-tags: hugo, npm, build
+tags: [hugo, npm, build]
 ---
 
 import MdxImage from '$components/mdx/Image';
 
-<MdxImage src="/img/hugo-plus-npm.png" style={{ maxWidth: '500px', width: '100%', marginLeft: '1em', maxHeight: '15em', float: 'right' }} />
+<MdxImage
+  src="/img/hugo-plus-npm.png"
+  style={{ maxWidth: '500px', width: '100%', marginLeft: '1em', maxHeight: '15em', float: 'right' }}
+/>
 
 As part of our recent relaunch, we migrated our marketing site (this one) to the [Hugo](https://gohugo.io) static site generator. After getting a hang of the basics, such as the directory structure and the Go template syntax, we're super pleased with the results &mdash; particularly the unparalleled build speed.
 
