--- a/src/content/blog/2017-02-14-deploy-hugo-circleci.mdx
+++ b/src/content/blog/2017-02-14-deploy-hugo-circleci.mdx
@@ -3,7 +3,7 @@ title: Deploy a Hugo site to Aerobatic with CircleCI
 description: With the recent introduction of our new CLI, you can now host your Hugo sites on GitHub and using a Continuous Deployment tool like CircleCI, deploy to Aerobatic.
 slug: hugo-github-circleci
 date: 2017-02-14
-tags: hugo, circleci, cd, github
+tags: [hugo, circleci, cd, github]
 ---
 
 import Cli from '$components/mdx/Cli';
