--- a/src/content/blog/2017-02-15-announcing-command-line-tool.mdx
+++ b/src/content/blog/2017-02-15-announcing-command-line-tool.mdx
@@ -3,7 +3,7 @@ title: Announcing support for Github, Gitlab and any other code repository host
 description: Aerobatic now is a command line tool, supporting any code Repository, including Github
 slug: announcing-command-line-tool
 date: 2017-02-15
-tags: github, cli
+tags: [github, cli]
 ---
 
 import Cli from '$components/mdx/Cli';
