--- a/src/content/blog/2017-02-18-password-protect-a-jekyll-site.mdx
+++ b/src/content/blog/2017-02-18-password-protect-a-jekyll-site.mdx
@@ -4,7 +4,7 @@ description: Add a login page to a Jekyll site in a few minutes without worrying
 slug: password-protect-a-jekyll-site
 
 date: 2017-02-18
-tags: jekyll, passwords, login
+tags: [jekyll, passwords, login]
 ---
 
 import MdxImage from '$components/mdx/Image';
@@ -36,7 +36,13 @@ layout: [INSERT YOUR SITE'S LAYOUT]
         <h6 class="error" id="password-error" style="color:red"><strong></strong></h6>
         <form method="POST">
           <label for="password">Password</label>
-          <input class="u-full-width" type="password" placeholder="password" name="aerobatic-password" id="aerobatic-password" />
+          <input
+            class="u-full-width"
+            type="password"
+            placeholder="password"
+            name="aerobatic-password"
+            id="aerobatic-password"
+          />
           <input class="button-primary" type="submit" value="Submit" />
         </form>
         <!-- /form -->
