--- a/src/content/blog/2017-02-20-hosting-phenomic.mdx
+++ b/src/content/blog/2017-02-20-hosting-phenomic.mdx
@@ -2,7 +2,7 @@
 title: Hosting Phenomic Static Site Generator Sites
 description: How to host a Phenomic static site generator site on Aerobatic
 date: 2017-02-20
-tags: phenomic, static, hosting, generator
+tags: [phenomic, static, hosting, generator]
 slug: hosting-phenomic
 ---
 
