--- a/src/content/blog/2017-03-14-deploying-jekyll-site-bitbucket-pipelines.mdx
+++ b/src/content/blog/2017-03-14-deploying-jekyll-site-bitbucket-pipelines.mdx
@@ -1,9 +1,8 @@
 ---
 title: Jekyll Continuous Deployment with Bitbucket Pipelines and Aerobatic
 description: A tutorial on how to continuously build and deploy a Jekyll site with Bitbucket Pipelines.
-
 date: 2017-03-14
-tags: bitbucket, jekyll, bitbucket pipelines
+tags: [bitbucket, jekyll, bitbucket pipelines]
 slug: jekyll-bitbucket-pipelines
 ---
 
