--- a/src/content/blog/2017-03-26-aerobatic-agency-workflow.mdx
+++ b/src/content/blog/2017-03-26-aerobatic-agency-workflow.mdx
@@ -2,7 +2,7 @@
 title: Introducing the AeroAgency workflow for agencies and freelancers
 description: Introducing the aero-agency workflow for agencies delivering website projects for clients
 date: 2017-03-27
-tags: agency, freelancer, workflow, aero
+tags: [agency, freelancer, workflow, aero]
 slug: aero-agency-flow-for-agencies-freelancers
 hidden: true
 ---
@@ -25,7 +25,12 @@ The workflow has 3 distinct phases: pre-launch, launch, and post-launch.
 
 This is the first phase of the client engagement. At this point scope has been agreed upon and perhaps some image mockups have been discussed. Now it's time to start actual coding of the first draft of the website (which could be as simple as a "Coming Soon" landing page).
 
-<MdxImage border align="center" alt="Prelaunch flow" src="https://www.aerobatic.com/media/diagrams/aero-agency-flow-prelaunch.png" />
+<MdxImage
+  border
+  align="center"
+  alt="Prelaunch flow"
+  src="https://www.aerobatic.com/media/diagrams/aero-agency-flow-prelaunch.png"
+/>
 
 Here's a breakdown of each step:
 
@@ -41,7 +46,12 @@ Here's a breakdown of each step:
 
 Once the initial release is ready in preview, the website needs to be upgraded to the Pro Plan to enable a custom domain to be provisioned.
 
-<MdxImage alt="Launch phase" src="https://www.aerobatic.com/media/--1/diagrams/aero-agency-flow-launch.png" border align="center" />
+<MdxImage
+  alt="Launch phase"
+  src="https://www.aerobatic.com/media/--1/diagrams/aero-agency-flow-launch.png"
+  border
+  align="center"
+/>
 
 There are two supported payer models:
 
@@ -85,7 +95,10 @@ Now do one more deployment:
 
 In the post-launch phase the website continues to be iterated on. Remember the coding done in the pre-launch phase may have been nothing more than a "Coming Soon" page &mdash; in which case the post-launch phase is where the vast majority of work happens. Now that the production URL is live, we need a different URL for the client to preview and approve changes. That's where Aerobatic [deploy stages](/docs/overview/deploy-stages/) come into play.
 
-<MdxImage src="https://www.aerobatic.com/media/diagrams/--1/aero-agency-flow-postlaunch.png" alt="Post Launch phase" />
+<MdxImage
+  src="https://www.aerobatic.com/media/diagrams/--1/aero-agency-flow-postlaunch.png"
+  alt="Post Launch phase"
+/>
 
 Let's walk through each step:
 
