--- a/src/content/blog/2017-03-28-multi-site-javascript-app-wildcard-subdomain.mdx
+++ b/src/content/blog/2017-03-28-multi-site-javascript-app-wildcard-subdomain.mdx
@@ -2,7 +2,7 @@
 title: Multi-site JavaScript apps using wildcard sub-domains
 description: Aerobatic supports a wildcard sub-domain that will resolve all sub-domains to the same website allowing for some interesting JavaScript app options.
 date: 2017-03-28
-tags: sub-domain, javascript, spa, wildcard
+tags: [sub-domain, javascript, spa, wildcard]
 slug: multi-site-javascript-app-wildcard-subdomain
 ---
 
@@ -12,9 +12,9 @@ For a standard static HTML content site, this is generally frowned upon as it in
 
 Imagine an HTML5 gaming site at the fictional domain **aerogames.play**. This technique would allow each game to run on a different sub-domain such as:
 
-* `https://tictactoe.aerogames.play`
-* `https://chess.aerogames.play`
-* `https://poker.aerogames.play`
+- `https://tictactoe.aerogames.play`
+- `https://chess.aerogames.play`
+- `https://poker.aerogames.play`
 
 From the static web serving perspective, each of these URLs is the exact same code &mdash; probably just a minimal HTML shim and a JavaScript bundle. The client script is responsible for examining the `window.location.hostname` and loading the correct game into the DOM. Even though it renders to the end user as distinct experiences, it's all the same physical site, so you only pay for a single Aerobatic subscription.
 
@@ -22,8 +22,8 @@ From the static web serving perspective, each of these URLs is the exact same co
 
 In your DNS console you'll need to either setup a separate CNAME for each game `tictactoe`, `chess`, etc., or even better, create a single wildcard CNAME. The advantages of the wildcard become even more apparent when deploying to a [non-production stage](/docs/deployment/#deploy-stages) such as **preview**. That will make the app available at these URLs:
 
-* `https://tictactoe--preview.aerogames.play`
-* `https://chess--preview.aerogames.play`
-* `https://poker--preview.aerogames.play`
+- `https://tictactoe--preview.aerogames.play`
+- `https://chess--preview.aerogames.play`
+- `https://poker--preview.aerogames.play`
 
 You get all this flexibility with only a single website to maintain and deploy. Pretty cool, right? 😁
