--- a/src/content/blog/2017-04-04-form-submit-zapier-google-sheet.mdx
+++ b/src/content/blog/2017-04-04-form-submit-zapier-google-sheet.mdx
@@ -2,7 +2,7 @@
 title: Post form submissions to a Google spreadsheet with Zapier
 description: Show how to use the form-submit plugin to append to a Google spreadsheet using Zapier
 date: 2017-04-03
-tags: sub-domain, javascript, spa, wildcard
+tags: [sub-domain, javascript, spa, wildcard]
 slug: form-submit-zapier-google-spreadsheet
 ---
 
@@ -13,7 +13,10 @@ The Aerobatic [form-submit](/docs/plugins/form-submit/) plugin allows you to col
 
 In this blog post we'll explore how to append each submission of a simple online contact form to a Google spreadsheet. We've chosen a spreadsheet since it's a familiar way to manage data, but the steps for integrating Aerobatic with other services via Zapier will work in a similar manner.
 
-<MdxImage src="https://www.aerobatic.com/media/blog/form-submit-webhook-google-sheet.png" alt="Form to webhook to Google sheet" />
+<MdxImage
+  src="https://www.aerobatic.com/media/blog/form-submit-webhook-google-sheet.png"
+  alt="Form to webhook to Google sheet"
+/>
 
 If you're unfamiliar with Aerobatic static plugins, check out [this introduction](/docs/configuration/#plugins). The code examples for this post are based on the [form-submit-demo](https://form-submit-demo.aerobaticapp.com) [[source code](https://github.com/aerobatic/form-submit-demo)].
 
