--- a/src/content/blog/2017-04-13-deploy-hugo-to-aerobatic-with-shippable.mdx
+++ b/src/content/blog/2017-04-13-deploy-hugo-to-aerobatic-with-shippable.mdx
@@ -2,7 +2,7 @@
 title: Deploy a Hugo Site to Aerobatic with Shippable
 description: Shippable is a Docker-based Continous Integration tool. Deploying to Aerobatic with Shippable is simple and powerful.
 date: 2017-04-13
-tags: shippable, github, cd, deploy
+tags: [shippable, github, cd, deploy]
 slug: aerobatic-shippable
 ---
 
