--- a/src/content/blog/2017-04-24-introducing-website-metrics.mdx
+++ b/src/content/blog/2017-04-24-introducing-website-metrics.mdx
@@ -2,7 +2,7 @@
 title: Introducing Aerobatic website metrics
 description: This new section of the dashboard provides valuable insights into your website traffic including visist, page views, visitor locations, devices, traffic source, and more.
 date: 2017-04-24
-tags: web analytics, metrics
+tags: [web analytics, metrics]
 slug: introducing-website-metrics
 ---
 
@@ -14,7 +14,10 @@ It's not a full Google Analytics replacement by any stretch, but it's also far l
 
 Your Aerobatic web metrics are kept completely private and not shared with any 3rd parties. Only you and members of your Aerobatic team account have access.
 
-<MdxImage alt="Metrics Screenshot" src="https://www.aerobatic.com/media/blog/metrics-dashboard-screen.png" />
+<MdxImage
+  alt="Metrics Screenshot"
+  src="https://www.aerobatic.com/media/blog/metrics-dashboard-screen.png"
+/>
 
 ### Available Now
 
