--- a/src/content/blog/2017-02-24-blogdown.mdx
+++ b/src/content/blog/2017-02-24-blogdown.mdx
@@ -2,9 +2,8 @@
 title: Deploy a Blogdown site to Aerobatic
 description: Create a blog in RStudio and deploy easily to Aerobatic.
 slug: blogdown
-
 date: 2017-02-24
-tags: hugo, blogdown, rstats
+tags: [hugo, blogdown, rstats]
 ---
 
 import Cli from '$components/mdx/Cli';
