--- a/src/content/docs/cli.mdx
+++ b/src/content/docs/cli.mdx
@@ -177,6 +177,12 @@ The URL to the commit that triggered this deployment. Also mostly useful when be
 
 </Option>
 
+<Alert type="info">
+
+If you want to avoid certain files from getting deployed with your site, you can specify an `ignore` property in the `deploy` section of your `aerobatic.yml`. See the [configuration section](/docs/configuration) for details.
+
+</Alert>
+
 **Examples**
 
 <Cli
