--- a/src/content/docs/configuration.mdx
+++ b/src/content/docs/configuration.mdx
@@ -17,8 +17,8 @@ There are two additional sections that can be added to the yml file: `deploy` an
 
 ```yaml
 deploy:
-  ignore: [*.scss]  # Don't deploy .scss files
-  directory: _site  # Specifies the directory to deploy
+  ignore: ['**/*.scss}'] # Don't deploy .scss files
+  directory: _site # Specifies the directory to deploy
 ```
 
 ## Plugins
