Fix spelling in Form Submit Plugin

--- a/src/content/docs/plugins/form-submit.mdx
+++ b/src/content/docs/plugins/form-submit.mdx
@@ -6,7 +6,7 @@ slug: form-submit
 
 import { Alert, Cli, Image } from '$components/mdx';
 
-The `form-submit` plugin let's you submit HTML forms from your Aerobatic static website. Form submissions are saved in a database on the Aerobatic side that you can view in the dashboard. It's a great solution for contact forms, quote requests, email list subscribes, user surveys, and the like.
+The `form-submit` plugin lets you submit HTML forms from your Aerobatic static website. Form submissions are saved in a database on the Aerobatic side that you can view in the dashboard. It's a great solution for contact forms, quote requests, email list subscribes, user surveys, and the like.
 
 You can optionally specify that form submissions be emailed or posted to a webhook enabling more sophisticated integrations with other services. The webhook feature is especially powerful when used in conjunction with [Zapier](https://zapier.com) which can combine an incoming webhook with lots of popular services like Mailchimp, Salesforce, and many more.
 
