Upgrading to latest node and gatsby

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -6,7 +6,7 @@ slug: getting-started
 import MdxImage from '$components/mdx/Image';
 import Cli from '$components/mdx/Cli';
 
-Aerobatic is a static website hosting platform, used by thousands of developers to host websites built with HTML, CSS, and JavaScript - including output from [static site generators](/docs/static-generators), and modern Single Page Apps (SPAs).
+Aerobatic is a static website hosting platform, used by thousands of developers to host websites built with HTML, CSS, and JavaScript - including output from [static site generators](/docs/static-site-generators/), and modern Single Page Apps (SPAs).
 
 To have your website live and served from our global Content Delivery Network (CDN) in seconds:
 
